--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <i class="icon-screen-desktop"></i>
           </span>
           <h4>
-            <strong>HTML/CSS</strong>
+            <strong>HTML/CSS/JavaScript</strong>
           </h4>
-          <p class="text-faded mb-0">I can design a website for you.</p>
+          <p class="text-faded mb-0">Have the necessary skills to design a thoughtful and functional website.</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -110,7 +110,7 @@
           <h4>
             <strong>Directions</strong>
           </h4>
-          <p class="text-faded mb-0">You will never get lost with me.</p>
+          <p class="text-faded mb-0">You won't get lost with my.</p>
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -148,18 +148,18 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Jenny Peterson | Software Developer</h2>
-                <p class="mb-0">I built my very own website!</p>
+                <p class="mb-0">Built my own website using Bootstrap, HTML, CSS, and JavaScript.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="./pizza/pizza.html" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Data Analysis</h2>
-                <p class="mb-0">I made sense of a bunch of numbers.</p>
+                <h2>Pie Time | Pizza</h2>
+                <p class="mb-0">Built using JavaScript, this website acts as on online pizza menu system that calculates total price based on selections.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
