--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0">Skills</h3>
-        <h2 class="mb-5">(More to come...)</h2>
+        <h2 class="mb-5">More to come...</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -92,7 +92,7 @@
           <h4>
             <strong>HTML/CSS/JavaScript</strong>
           </h4>
-          <p class="text-faded mb-0">Have the necessary skills to design a thoughtful and functional website.</p>
+          <p class="text-faded mb-0">Thoughtful and functional website design.</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -105,21 +105,21 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-people"></i>
+            <i class="icon-organization"></i>
           </span>
           <h4>
-            <strong>Directions</strong>
+            <strong>SQL/SQL Server</strong>
           </h4>
-          <p class="text-faded mb-0">You won't get lost with my.</p>
+          <p class="text-faded mb-0">Queries and data manipulation.</p>
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-map"></i>
+            <i class="icon-screen-tablet"></i>
           </span>
           <h4>
-            <strong>Timely</strong>
+            <strong>Python/Django</strong>
           </h4>
-          <p class="text-faded mb-0">I get things done on time.</p>
+          <p class="text-faded mb-0">App development and web frameworks.</p>
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Jenny Peterson | Software Developer</h2>
-                <p class="mb-0">Built my own website using Bootstrap, HTML, CSS, and JavaScript.</p>
+                <p class="mb-0">Created my own website using Bootstrap, HTML, CSS, and JavaScript.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -166,18 +166,18 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="https://github.com/JennyPeterson10/The-Tech-Academy-Python-Projects/tree/master/check_files" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Another project will go here</h2>
-                <p class="mb-0">Check it out!</p>
+                <h2>Move Files</h2>
+                <p class="mb-0">Developed a program using Python to transfer text files from one directory to another.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="">
             <span class="caption">
               <span class="caption-content">
                 <h2>Some really cool app</h2>
@@ -195,7 +195,7 @@
   <section class="content-section bg-primary text-white" id="contact">
     <div class="container text-center">
       <h2 class="mb-4">Interested in working together?</h2>
-      <img class="img-fluid rounded-circle mb-4" style="max-width:25%" src="./img/bike.jpg" alt=""><br>
+      <img class="img-fluid rounded-circle mb-4" style="max-width:25%" src="./img/headshot.jpg" alt=""><br>
       <a href="#" class="btn btn-xl btn-dark">Contact Me</a>
     </div>
   </section>
