Add C# info and Auto Insurance project

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0">Skills</h3>
-        <h2 class="mb-5">More to come...</h2>
+        <h2 class="mb-5">Full Stack developer skills </h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -118,6 +118,15 @@
           </span>
           <h4>
             <strong>Python/Django</strong>
+          </h4>
+          <p class="text-faded mb-0">App development and web frameworks.</p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-screen-tablet"></i>
+          </span>
+          <h4>
+            <strong>C#/.NET Framework</strong>
           </h4>
           <p class="text-faded mb-0">App development and web frameworks.</p>
         </div>
@@ -180,8 +189,8 @@
           <a class="portfolio-item" href="">
             <span class="caption">
               <span class="caption-content">
-                <h2>Some really cool app</h2>
-                <p class="mb-0">Maybe one day I'll make an app.</p>
+                <h2>Top Notch Auto Insurance</h2>
+                <p class="mb-0">Created an MVC App using C# that computes a quote for auto insurance based on user input.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
