--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
   <section class="content-section bg-primary text-white text-center" id="skills">
     <div class="container">
       <div class="content-section-heading">
-        <h3 class="text-secondary mb-0">Skills</h3>
-        <h2 class="mb-5">Full Stack developer skills </h2>
+        <!-- <h3 class="text-secondary mb-0">Skills</h3> -->
+        <h2 class="mb-5">Skills </h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -94,7 +94,7 @@
           </h4>
           <p class="text-faded mb-0">Thoughtful and functional website design.</p>
         </div>
-        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+        <!-- <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-social-github"></i>
           </span>
@@ -102,7 +102,7 @@
             <strong>GitHub/Version Control</strong>
           </h4>
           <p class="text-faded mb-0">Solid understanding of the practices of version control.</p>
-        </div>
+        </div> -->
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-organization"></i>
@@ -123,46 +123,25 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-screen-tablet"></i>
+            <i class="icon-screen-smartphone"></i>
           </span>
           <h4>
             <strong>C#/.NET Framework</strong>
           </h4>
-          <p class="text-faded mb-0">App development and web frameworks.</p>
+          <p class="text-faded mb-0">Responsive web applications.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Callout   MIGHT NOT END UP USING THIS
-  <section class="callout">
-    <div class="container text-center">
-      <h2 class="mx-auto mb-5">Welcome to
-        <em>your</em>
-        next website!</h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
-    </div>
-  </section>--->
-
   <!-- Portfolio -->
   <section class="content-section" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h3 class="text-secondary mb-0">Portfolio</h3>
-        <h2 class="mb-5">Recent Projects</h2>
+        <!-- <h3 class="text-secondary mb-0">Portfolio</h3> -->
+        <h2 class="mb-5">Portfolio</h2>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>Jenny Peterson | Software Developer</h2>
-                <p class="mb-0">Created my own website using Bootstrap, HTML, CSS, and JavaScript.</p>
-              </span>
-            </span>
-            <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
-          </a>
-        </div>
         <div class="col-lg-6">
           <a class="portfolio-item" href="./pizza/pizza.html" target="_blank">
             <span class="caption">
@@ -186,7 +165,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="">
+          <a class="portfolio-item" href="https://github.com/JennyPeterson10/The-Tech-Academy-C-Sharp-Projects/tree/master/AutoInsurance" target="_blank">
             <span class="caption">
               <span class="caption-content">
                 <h2>Top Notch Auto Insurance</h2>
@@ -194,6 +173,39 @@
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="https://github.com/JennyPeterson10/Live-Projects" target="_blank">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Calendar App</h2>
+                <p class="mb-0">As part of a larger project, built a calendar using Python to add travel related events and activites.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/portfolio-9.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="https://github.com/JennyPeterson10/SetLists" target="_blank">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>My Set Lists</h2>
+                <p class="mb-0">Using MVC Code First, developed a web application to create and edit set lists.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/portfolio-8.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="https://github.com/JennyPeterson10/Live-Projects" target="_blank">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>User Request Confirmation Code</h2>
+                <p class="mb-0">Created a method for confirming a new user through a randomly generated code.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/portfolio-6.jpg" alt="">
           </a>
         </div>
       </div>
@@ -205,7 +217,7 @@
     <div class="container text-center">
       <h2 class="mb-4">Interested in working together?</h2>
       <img class="img-fluid rounded-circle mb-4" style="max-width:25%" src="./img/headshot.jpg" alt=""><br>
-      <a href="#" class="btn btn-xl btn-dark">Contact Me</a>
+      <a href="mailto:petersonjennye@gmail.com" class="btn btn-xl btn-dark">Contact Me</a>
     </div>
   </section>
 
@@ -214,12 +226,12 @@
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/jenny-peterson-aa8ba468" target="_blank">
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/jennyepeterson" target="_blank">
             <i class="icon-social-linkedin"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="" target="_blank">
+          <a class="social-link rounded-circle text-white mr-3" href="mailto:petersonjennye@gmail.com" target="_blank">
             <i class="icon-envelope"></i>
           </a>
         </li>
